--- a/navbar.css
+++ b/navbar.css
@@ -44,6 +44,9 @@
     right: 40px;
     text-decoration: none;
     z-index:10;
+    
+
+
 }
 
 @media screen and (max-height: 450px) {
@@ -55,8 +58,8 @@
 /* Hamburger Icon */
 #hamburger-icon{
     display: block;
-    width: 50px;
-    height: 39px;
+    width: 30px;
+    height: 1px;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
@@ -66,14 +69,23 @@
     -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
     cursor: pointer;
+   background-color: white;
+    height:4rem;
+    width:4rem;
+    top:5.5rem;
+    right: 5.5rem;
+    border-radius: 50%;
+
+
+
 }
 
 
 #hamburger-icon span {
     display: block;
     position: absolute;
-    height: 7px;
-    width: 100%;
+    height: 2px;
+    width: 38px;
     background: #333;
     border-radius: 3px;
     opacity: 1;
@@ -86,6 +98,12 @@
     -moz-transition: .25s ease-in-out;
     -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
+    top: 10px;
+
+
+
+
+
 }
 
 
@@ -93,15 +111,14 @@
 
 #hamburger-icon span:nth-child(1) {
     top: 0px;
+
 }
 
 #hamburger-icon span:nth-child(2), #hamburger-icon span:nth-child(3) {
-    top: 16px;
+    top: 20px;
 }
 
-#hamburger-icon span:nth-child(4) {
-    top: 32px;
-}
+
 
 #hamburger-icon.hamburger-open span{background:#fff}
 
@@ -125,8 +142,3 @@
     transform: rotate(-45deg);
 }
 
-#hamburger-icon.hamburger-open span:nth-child(4) {
-    top: 18px;
-    width: 0%;
-    left: 50%;
-}
