Javascript added to website

--- a/navbar.css
+++ b/navbar.css
@@ -8,8 +8,8 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background-image: radial-gradient(#7ed56f, #28b485);
+
     overflow-y: hidden;
     transition: 0.5s;
 }
@@ -44,7 +44,8 @@
     right: 40px;
     text-decoration: none;
     z-index:10;
-    
+
+
 
 
 }
@@ -77,7 +78,6 @@
     border-radius: 50%;
 
 
-
 }
 
 
@@ -86,7 +86,7 @@
     position: absolute;
     height: 2px;
     width: 38px;
-    background: #333;
+    background: brown;
     border-radius: 3px;
     opacity: 1;
     left: 0;
@@ -99,6 +99,8 @@
     -o-transition: .25s ease-in-out;
     transition: .25s ease-in-out;
     top: 10px;
+    margin: 32% 20%;
+
 
 
 
@@ -116,6 +118,7 @@
 
 #hamburger-icon span:nth-child(2), #hamburger-icon span:nth-child(3) {
     top: 20px;
+
 }
 
 
