--- a/navbar.css
+++ b/navbar.css
@@ -150,3 +150,10 @@
     transform: rotate(-45deg);
 }
 
+
+
+#hamburger-icon.hamburger-open span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+}
